--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav a {
+  padding: 10;
+  background: #ccc;
+}
+
+figcaption {text-align: center;}
+
+#featured-property p {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details > div {
+  float: left;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+  background-color: #ccc;
+}
